added warp system and bonfire menu

--- a/src/main/resources/manifest.json
+++ b/src/main/resources/manifest.json
@@ -12,7 +12,9 @@
     }
   ],
   "Website": "",
-  "Dependencies": {},
+  "Dependencies": {
+    "Hytale:EntityModule": "*"
+  },
   "OptionalDependencies": {},
   "LoadBefore": {},
   "DisabledByDefault": false,
