--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,11 @@ bin/
 ### Mac OS ###
 .DS_Store
 libs/HytaleServer.jar
+
+### Decompiler ###
+cfr.jar
+decompiled-server/
+
+### Claude ###
+.claudeconfig
+CLAUDE.md
